# 3d-bin-packing-simulator

./: .gitignore  CMakeLists.txt  Cargo.cpp  Cargo.h  CargoBay.cpp  CargoBay.h  CargoCube.cpp  CargoCube.h  CargoSphere.cpp  CargoSphere.h  Cube.h  README.md  Shape.h  main.cpp
